--- a/views/index.html
+++ b/views/index.html
@@ -714,7 +714,7 @@
                         <a class="select-item" href="https://www.aeknow.org/">AEKNOW</a>
                     </div>
                 </li>
-                <li><a target="_blank" href="https://aeasy.gitbook.io/aeasy/">{{i18n .Lang "nav_doc"}}</a></li>
+                <li><a target="_blank" href="https://app.gitbook.com/@283122529/s/aeasy/">{{i18n .Lang "nav_doc"}}</a></li>
                 <li><a href="/language">{{i18n .Lang "nav_language"}}</a></li>
                 <li><a class="login" href="./login.html">{{i18n .Lang "nav_login"}}</a></li>
 
