--- a/views/tokens_create.html
+++ b/views/tokens_create.html
@@ -66,7 +66,7 @@
         </div>
         <div class="menu">
             <ul>
-                <li><a href="https://aeasy.gitbook.io/aeasy/">{{i18n .Lang "nav_doc"}}</a></li>
+                <li><a href="https://app.gitbook.com/@283122529/s/aeasy/">{{i18n .Lang "nav_doc"}}</a></li>
                 <li><a class="login" id="go-logout" href="#">{{i18n .Lang "nav_logout"}}</a></li>
             </ul>
         </div>
