--- a/views/user.html
+++ b/views/user.html
@@ -40,7 +40,7 @@
         <div class="menu">
             <ul>
 
-                <li><a href="https://aeasy.gitbook.io/aeasy/">{{i18n .Lang "nav_doc"}}</a></li>
+                <li><a href="https://app.gitbook.com/@283122529/s/aeasy/">{{i18n .Lang "nav_doc"}}</a></li>
                 <li><a class="login" id="go-logout" href="#">{{i18n .Lang "nav_logout"}}</a></li>
             </ul>
         </div>
@@ -83,7 +83,7 @@
             </div>
             <div style="overflow:hidden;">
                 <div class="start" style="float: left">
-                    <a href="https://aeasy.gitbook.io/aeasy/" target="_blank">{{i18n .Lang "Document"}}</a>
+                    <a href="https://app.gitbook.com/@283122529/s/aeasy/" target="_blank">{{i18n .Lang "Document"}}</a>
                 </div>
                 <div class="start2" style="float: left;margin-left: 20px">
                     <a href="/token" target="_blank">{{i18n .Lang "Tokens"}}</a>
