--- a/views/index.html
+++ b/views/index.html
@@ -845,7 +845,8 @@
                 <img src="../static/img/index_guanyu.png" alt="about">
             </div>
             <div class="title">{{i18n .Lang "About AEasy"}}</div>
-            <div class="sub">{{i18n .Lang "We are passionate about designing more aepp"}}</div>
+            <div class="sub">Sponsors <a class="sub" href="https://www.aeternity-foundation.org/">Æternity Crypto Foundation</a></div>
+
         </div>
         <div class="help">
             <div class="icon">
